force-app/main/default/objects/sumoapp__Attendee__c/sumoapp__Attendee__c.object-meta.xml
<CustomObject>
    <label>SUMO Attendee</label>
    <nameField>
        <displayFormat>ATD-{000000}</displayFormat>
        <label>Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>