force-app/main/default/objects/sumoapp__Attendee__c/fields/sumoapp__ConfirmationNumber__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ConfirmationNumber__c</fullName>
    <label>Confirmation Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>