force-app/main/default/objects/sumoapp__Attendee__c/fields/sumoapp__ContactRelation__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ContactRelation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Relation</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Event Attendees</relationshipLabel>
    <relationshipName>ContactEventAttendees</relationshipName>
    <type>Lookup</type>
</CustomField>