force-app/main/default/objects/sumoapp__Attendee__c/fields/sumoapp__DeclinedBy__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__DeclinedBy__c</fullName>
    <description>Name of internal User that declined the attendee or static string &apos;ATTENDEE&apos; if declined by guest user</description>
    <label>Declined By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>