force-app/main/default/objects/sumoapp__Attendee__c/fields/sumoapp__DeclineReason__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__DeclineReason__c</fullName>
    <label>Decline Reason</label>
    <type>TextArea</type>
</CustomField>