force-app/main/default/objects/sumoapp__Attendee__c/fields/sumoapp__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ExpirationDate__c</fullName>
    <formula>CASE(sumoapp__Status__c, &apos;DRAFT&apos;, CreatedDate + 65/1440, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>