force-app/main/default/objects/sumoapp__Attendee__c/fields/sumoapp__IsNotArrived__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsNotArrived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It shows whether the attendee has arrived at the event or not</description>
    <inlineHelpText>Set this value if the attendee did not arrive at the event</inlineHelpText>
    <label>Is Not Arrived</label>
    <type>Checkbox</type>
</CustomField>