force-app/main/default/objects/sumoapp__Attendee__c/fields/sumoapp__LeadRelation__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__LeadRelation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Relation</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Event Attendees</relationshipLabel>
    <relationshipName>LeadEventAttendees</relationshipName>
    <type>Lookup</type>
</CustomField>