force-app/main/default/objects/sumoapp__Attendee__c/fields/sumoapp__NumberOfSeats__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__NumberOfSeats__c</fullName>
    <inlineHelpText>The # of seats or people registered for this event.</inlineHelpText>
    <label># of Seats</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>