force-app/main/default/objects/sumoapp__Attendee__c/fields/sumoapp__Status__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOOKED</fullName>
                <default>true</default>
                <label>Booked</label>
            </value>
            <value>
                <fullName>DRAFT</fullName>
                <label>Draft</label>
            </value>
            <value>
                <fullName>PAID</fullName>
                <label>Paid</label>
            </value>
            <value>
                <fullName>DECLINED</fullName>
                <label>Declined</label>
            </value>
            <value>
                <fullName>CANCELED</fullName>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>WAITLISTED</fullName>
                <label>Waitlisted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>