force-app/main/default/objects/sumoapp__Attendee__c/fields/sumoapp__SumoEvent__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__SumoEvent__c</fullName>
    <label>SUMO Event</label>
    <referenceTo>sumoapp__AdditionalInfo__c</referenceTo>
    <relationshipLabel>Event Attendees</relationshipLabel>
    <relationshipName>EventAttendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>