force-app/main/default/objects/sumoapp__Attendee__c/fields/sumoapp__SumoUserRelation__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__SumoUserRelation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SUMO User Relation</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SumoUserEventAttendees</relationshipName>
    <type>Lookup</type>
</CustomField>